<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Productversion="">
  <DUT Name="E_AnalysisComponents" Id="cc226d03-6118-4fa9-a8cb-e4c5fc7acfbd">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_AnalysisComponents : 
(
	All := -1,
	N1_Network := 0,
	N1_M1_ProductionTimingAnalysis1Ch := 1,
	N1_M2_MaintenanceTimingAnalysis1Ch := 2,
	N1_M3_ParetoAnalysis := 3,
	V1_127_0_0_1_PackMLPlcStream1_10_00ms := 4
) ;
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>