<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Productversion="">
  <DUT Name="ST_HMI_DataSourceCtrl" Id="e47ca695-e74f-4f0e-855c-2b5e643a5782">
    <Declaration><![CDATA[TYPE ST_HMI_DataSourceCtrl : 
STRUCT
	nActiveConfigurationIdx: INT;
	
	aInputSourceCtrls: ARRAY [0..0] OF ST_HMI_InputSourceCtrl;
	
	bStart: BOOL;
	bCancel: BOOL;
	bPause: BOOL;
	bReset: BOOL;
	
	bUpdateRecordList: BOOL;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>