<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Productversion="">
  <DUT Name="ST_AnalysisReset" Id="390ee2e7-30db-4241-a98a-75f5546178da">
    <Declaration><![CDATA[TYPE ST_AnalysisReset : 
STRUCT
	eResetComponent: E_AnalysisComponents := E_AnalysisComponents.All;
	bResetExecute: BOOL;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>